# pHash

./: .gitignore  configure.ac  pHash-config.h.in
examples/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  pHash-c.cpp  pHash-c.h  pHash.h
